[package]
name = "response_reader"
version = "0.1.0"
authors = ["Kasra Ferdowsifard <kferdowsifard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3"
iced_native = "0.4"
serde_json = "*"
serde = {version = "*", features = ["derive"]}
